fix gap between tts buttons (issue #2189)

--- a/src/renderer/assets/styles/components/readerHeader.scss
+++ b/src/renderer/assets/styles/components/readerHeader.scss
@@ -153,6 +153,7 @@
             display: flex;
             padding: 0;
             flex: 1;
+            gap: 5px;
         }
     }
 }
